Reference from * to *-*.

--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/Wisej.Web.Ext.Kendo.Demo.csproj
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/Wisej.Web.Ext.Kendo.Demo.csproj
@@ -60,7 +60,7 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 		<PackageReference Include="Wisej-3" Version="3.0.*" />
-		<PackageReference Include="Wisej-3-Kendo" Version="3.0.*" />
+		<PackageReference Include="Wisej-3-Kendo" Version="3.0.*-*" />
 		<PackageReference Include="Wisej-3-MaterialDesign" Version="3.0.*" />
 	</ItemGroup>
 
