--- a/Wisej.DemoBrowser/Web.config
+++ b/Wisej.DemoBrowser/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <appSettings>
     <add key="Wisej.LicenseKey" value=""/>
-    <add key="Wisej.DefaultTheme" value="Blue-1"/>
+    <add key="Wisej.DefaultTheme" value="Bootstrap-4"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
