Finish Feature and InputType

--- a/Wisej.DemoBrowser/Wisej.DemoBrowser.csproj
+++ b/Wisej.DemoBrowser/Wisej.DemoBrowser.csproj
@@ -68,6 +68,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <_ContentIncludedByDefault Remove="ClientProfiles.json" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<Content Include="Default.html">
 			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
 		</Content>
