--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Syncfusion2.Demo/Web.config
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Syncfusion2.Demo/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <appSettings>
-    <add key="Wisej.LicenseKey" value=""/>
+    <add key="Wisej.LicenseKey" value="1135af380a587587f7a7ca1eef39465b"/>
     <add key="Wisej.DefaultTheme" value="Bootstrap-4"/>
   </appSettings>
   <system.web>
