--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Syncfusion.Demo/Wisej.Web.Ext.Syncfusion.Demo.csproj
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Syncfusion.Demo/Wisej.Web.Ext.Syncfusion.Demo.csproj
@@ -54,7 +54,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Wisej-3" Version="3.2.0-test.4" />
+		<PackageReference Include="Wisej-3" Version="3.2.*-*" />
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 		<PackageReference Include="Wisej-3-Syncfusion" Version="3.0.*-*" />
 		<PackageReference Include="Wisej-3-MaterialDesign" Version="3.0.*" />
