--- a/Demos/Extensions/Wisej.DemoBrowser.Pannellum/Wisej.DemoBrowser.Pannellum.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.Pannellum/Wisej.DemoBrowser.Pannellum.csproj
@@ -14,9 +14,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Wisej-3" Version="3.0.*" />
+		<PackageReference Include="Wisej-3" Version="3.1.9-preview.5" />
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-		<PackageReference Include="Wisej-3-Pannellum" Version="3.0.*" />
+		<PackageReference Include="Wisej-3-Pannellum" Version="3.1.*" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
 
