--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Ignite.Demo/Wisej.Web.Ext.Ignite.Demo.csproj
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Ignite.Demo/Wisej.Web.Ext.Ignite.Demo.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFrameworks>net48;net6.0</TargetFrameworks>
+		<TargetFrameworks>net48;net7.0</TargetFrameworks>
 		<PlatformTarget>AnyCPU</PlatformTarget>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<EmbeddedResourceUseDependentUponConvention>true</EmbeddedResourceUseDependentUponConvention>
@@ -56,10 +56,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Wisej-3" Version="3.0.*" />
+		<PackageReference Include="Wisej-3" Version="3.2.*-*" />
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-		<PackageReference Include="Wisej-3-Ignite" Version="3.0.*-*" />
-		<PackageReference Include="Wisej-3-MaterialDesign" Version="3.0.*" />
+		<PackageReference Include="Wisej-3-Ignite" Version="3.2.*-*" />
+		<PackageReference Include="Wisej-3-MaterialDesign" Version="3.2.*-*" />
 	</ItemGroup>
 
 	<ItemGroup>
