--- a/Demos/Extensions/Wisej.DemoBrowser.NavigationBar/Wisej.DemoBrowser.NavigationBar.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.NavigationBar/Wisej.DemoBrowser.NavigationBar.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net48;net6.0</TargetFrameworks>
+		<TargetFrameworks>net48;net8.0</TargetFrameworks>
 		<PlatformTarget>AnyCPU</PlatformTarget>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
@@ -24,10 +24,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Wisej-3" Version="3.1.*" />
-		<PackageReference Include="Wisej-3-MaterialDesign" Version="3.1.*" />
-		<PackageReference Include="Wisej-3-NavigationBar" Version="3.1.*" />
-		<PackageReference Include="Wisej-3-ProgressCircle" Version="3.1.*" />
+		<PackageReference Include="Wisej-3" Version="3.5.*-*" />
+		<PackageReference Include="Wisej-3-MaterialDesign" Version="3.5.*-*" />
+		<PackageReference Include="Wisej-3-NavigationBar" Version="3.5.*-*" />
+		<PackageReference Include="Wisej-3-ProgressCircle" Version="3.5.*-*" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
 
