--- a/Demos/Grids/Wisej.DemoBrowser.DataGridView/Wisej.DemoBrowser.DataGridView.csproj
+++ b/Demos/Grids/Wisej.DemoBrowser.DataGridView/Wisej.DemoBrowser.DataGridView.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net48;net6.0</TargetFrameworks>
+		<TargetFrameworks>net48;net8.0</TargetFrameworks>
 		<PlatformTarget>AnyCPU</PlatformTarget>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
@@ -25,9 +25,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="Bogus" Version="34.0.2" />
-		<PackageReference Include="Wisej-3" Version="3.1.*" />
+		<PackageReference Include="Wisej-3" Version="3.5.*-*" />
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-		<PackageReference Include="Wisej-3-VisualStudioIcons" Version="3.1.*" />
+		<PackageReference Include="Wisej-3-VisualStudioIcons" Version="3.5.*-*" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
 
