--- a/Demos/Miscellaneous/Wisej.DemoBrowser.Shape/Wisej.DemoBrowser.Shape.csproj
+++ b/Demos/Miscellaneous/Wisej.DemoBrowser.Shape/Wisej.DemoBrowser.Shape.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFrameworks>net48;net6.0</TargetFrameworks>
+	  <TargetFrameworks>net48;net8.0</TargetFrameworks>
 	  <PlatformTarget>AnyCPU</PlatformTarget>
 	  <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	  <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
@@ -12,7 +12,7 @@
 		<Reference Include="System.Windows.Forms" />
 	</ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Wisej-3" Version="3.1.*" />
+    <PackageReference Include="Wisej-3" Version="3.5.*-*" />
   </ItemGroup>
 
   <ItemGroup>
