--- a/Wisej.DemoBrowser/Wisej.DemoBrowser.csproj
+++ b/Wisej.DemoBrowser/Wisej.DemoBrowser.csproj
@@ -102,7 +102,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Wisej-3" Version="3.5.4-preview.5" />
+		<PackageReference Include="Wisej-3" Version="3.5.*-*" />
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 	</ItemGroup>
 
@@ -149,6 +149,7 @@
 	  <ProjectReference Include="..\Demos\Extensions\Wisej.DemoBrowser.Bubbles\Wisej.DemoBrowser.Bubbles.csproj" />
 	  <ProjectReference Include="..\Demos\Extensions\Wisej.DemoBrowser.Camera\Wisej.DemoBrowser.Camera.csproj" />
 	  <ProjectReference Include="..\Demos\Extensions\Wisej.DemoBrowser.ChartJS\Wisej.DemoBrowser.ChartJS.csproj" />
+	  <ProjectReference Include="..\Demos\Extensions\Wisej.DemoBrowser.ChatControl\Wisej.DemoBrowser.ChatControl.csproj" />
 	  <ProjectReference Include="..\Demos\Extensions\Wisej.DemoBrowser.CKEditor\Wisej.DemoBrowser.CKEditor.csproj" />
 	  <ProjectReference Include="..\Demos\Extensions\Wisej.DemoBrowser.CoolClock\Wisej.DemoBrowser.CoolClock.csproj" />
 	  <ProjectReference Include="..\Demos\Extensions\Wisej.DemoBrowser.CountUp\Wisej.DemoBrowser.CountUp.csproj" />
