--- a/Demos/Extensions/Wisej.Demobrowser.Tesseract/Wisej.DemoBrowser.Tesseract.csproj
+++ b/Demos/Extensions/Wisej.Demobrowser.Tesseract/Wisej.DemoBrowser.Tesseract.csproj
@@ -16,7 +16,27 @@
 	<ItemGroup>
 		<PackageReference Include="Wisej-3" Version="3.5.*-*" />
 		<PackageReference Include="Wisej-3-Camera" Version="3.5.*-*" />
+		<PackageReference Include="Wisej-3-Tesseract" Version="3.5.4" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="ImagesToScan\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Properties\Resources.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Resources.resx</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="Properties\Resources.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
 	</ItemGroup>
 
 </Project>
