--- a/Demos/Extensions/Wisej.Demobrowser.Tesseract/Wisej.DemoBrowser.Tesseract.csproj
+++ b/Demos/Extensions/Wisej.Demobrowser.Tesseract/Wisej.DemoBrowser.Tesseract.csproj
@@ -28,7 +28,7 @@
 	<ItemGroup>
 		<PackageReference Include="Wisej-3" Version="3.5.*-*" />
 		<PackageReference Include="Wisej-3-Camera" Version="3.5.*-*" />
-		<PackageReference Include="Wisej-3-Tesseract" Version="3.5.4" />
+		<PackageReference Include="Wisej-3-Tesseract" Version="3.5.*-*" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
 
