--- a/Demos/Containers/Wisej.DemoBrowser.FlowLayoutPanel/Wisej.DemoBrowser.FlowLayoutPanel.csproj
+++ b/Demos/Containers/Wisej.DemoBrowser.FlowLayoutPanel/Wisej.DemoBrowser.FlowLayoutPanel.csproj
@@ -15,7 +15,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Bogus" Version="34.0.2" />
-		<PackageReference Include="Wisej-3" Version="3.5.*-*" />
+		<PackageReference Include="Wisej-3" Version="3.5.5-preview.1" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
 
