--- a/Demos/Extensions/Wisej.DemoBrowser.JustGage/Wisej.DemoBrowser.JustGage.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.JustGage/Wisej.DemoBrowser.JustGage.csproj
@@ -22,8 +22,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Wisej-3" Version="3.5.*-*" />
-		<PackageReference Include="Wisej-3-JustGage" Version="3.5.*-*" />
+		<PackageReference Include="Wisej-3" Version="3.5.5-preview.1" />
+		<PackageReference Include="Wisej-3-JustGage" Version="3.5.5-preview.1" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
 
