--- a/Demos/Extensions/Wisej.DemoBrowser.NavigationBar/Wisej.DemoBrowser.NavigationBar.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.NavigationBar/Wisej.DemoBrowser.NavigationBar.csproj
@@ -24,10 +24,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Wisej-3" Version="3.5.*-*" />
-		<PackageReference Include="Wisej-3-MaterialDesign" Version="3.5.*-*" />
-		<PackageReference Include="Wisej-3-NavigationBar" Version="3.5.*-*" />
-		<PackageReference Include="Wisej-3-ProgressCircle" Version="3.5.*-*" />
+		<PackageReference Include="Wisej-3" Version="3.5.5-preview.1" />
+		<PackageReference Include="Wisej-3-MaterialDesign" Version="3.5.5-preview.1" />
+		<PackageReference Include="Wisej-3-NavigationBar" Version="3.5.5-preview.1" />
+		<PackageReference Include="Wisej-3-ProgressCircle" Version="3.5.5-preview.1" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
 
