--- a/Demos/Grids/Wisej.DemoBrowser.DataGridView/Wisej.DemoBrowser.DataGridView.csproj
+++ b/Demos/Grids/Wisej.DemoBrowser.DataGridView/Wisej.DemoBrowser.DataGridView.csproj
@@ -25,9 +25,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="Bogus" Version="34.0.2" />
-		<PackageReference Include="Wisej-3" Version="3.5.*-*" />
+		<PackageReference Include="Wisej-3" Version="3.5.5-preview.1" />
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-		<PackageReference Include="Wisej-3-VisualStudioIcons" Version="3.5.*-*" />
+		<PackageReference Include="Wisej-3-VisualStudioIcons" Version="3.5.5-preview.1" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
 
