--- a/Demos/Grids/Wisej.DemoBrowser.PropertyGrid/Wisej.DemoBrowser.PropertyGrid.csproj
+++ b/Demos/Grids/Wisej.DemoBrowser.PropertyGrid/Wisej.DemoBrowser.PropertyGrid.csproj
@@ -19,8 +19,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Bogus" Version="34.0.2" />
-		<PackageReference Include="Wisej-3" Version="3.5.*-*" />
-		<PackageReference Include="Wisej-3-Barcode" Version="3.5.*-*" />
+		<PackageReference Include="Wisej-3" Version="3.5.5-preview.1" />
+		<PackageReference Include="Wisej-3-Barcode" Version="3.5.5-preview.1" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
 
