--- a/Demos/Miscellaneous/Wisej.DemoBrowser.Shape/Wisej.DemoBrowser.Shape.csproj
+++ b/Demos/Miscellaneous/Wisej.DemoBrowser.Shape/Wisej.DemoBrowser.Shape.csproj
@@ -12,7 +12,7 @@
 		<Reference Include="System.Windows.Forms" />
 	</ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Wisej-3" Version="3.5.*-*" />
+    <PackageReference Include="Wisej-3" Version="3.5.5-preview.1" />
   </ItemGroup>
 
   <ItemGroup>
