--- a/Wisej.DemoBrowser.Common/Wisej.DemoBrowser.Common.csproj
+++ b/Wisej.DemoBrowser.Common/Wisej.DemoBrowser.Common.csproj
@@ -69,7 +69,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Wisej-3" Version="3.5.*-*" />
+		<PackageReference Include="Wisej-3" Version="3.5.5-preview.1" />
 	</ItemGroup>
 
 </Project>
