--- a/Wisej.DemoBrowser/Wisej.DemoBrowser.csproj
+++ b/Wisej.DemoBrowser/Wisej.DemoBrowser.csproj
@@ -102,7 +102,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Wisej-3" Version="3.5.*-*" />
+		<PackageReference Include="Wisej-3" Version="3.5.5-preview.1" />
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 	</ItemGroup>
 
