--- a/Demos/Containers/Wisej.DemoBrowser.TabControl/Wisej.DemoBrowser.TabControl.csproj
+++ b/Demos/Containers/Wisej.DemoBrowser.TabControl/Wisej.DemoBrowser.TabControl.csproj
@@ -24,7 +24,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Wisej-3" Version="3.5.5-preview.1" />
+		<PackageReference Include="Wisej-3" Version="3.5.*-*" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
 
