--- a/Demos/Content/Wisej.DemoBrowser.HtmlPanel/Wisej.DemoBrowser.HtmlPanel.csproj
+++ b/Demos/Content/Wisej.DemoBrowser.HtmlPanel/Wisej.DemoBrowser.HtmlPanel.csproj
@@ -22,9 +22,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Wisej-3" Version="3.5.5-preview.1" />
+		<PackageReference Include="Wisej-3" Version="3.5.*-*" />
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-		<PackageReference Include="Wisej-3-AceEditor" Version="3.5.5-preview.1" />
+		<PackageReference Include="Wisej-3-AceEditor" Version="3.5.*-*" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
 
