--- a/Demos/Extensions/Wisej.DemoBrowser.FullCalendar/Wisej.DemoBrowser.FullCalendar.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.FullCalendar/Wisej.DemoBrowser.FullCalendar.csproj
@@ -14,8 +14,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Wisej-3" Version="3.5.5-preview.1" />
-		<PackageReference Include="Wisej-3-FullCalendar" Version="3.5.5-preview.1" />
+		<PackageReference Include="Wisej-3" Version="3.5.*-*" />
+		<PackageReference Include="Wisej-3-FullCalendar" Version="3.5.*-*" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
 
