--- a/Demos/Extensions/Wisej.DemoBrowser.Barcode/Wisej.DemoBrowser.Barcode.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.Barcode/Wisej.DemoBrowser.Barcode.csproj
@@ -19,4 +19,10 @@
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Compile Update="Scanner.cs">
+	    <SubType>UserControl</SubType>
+	  </Compile>
+	</ItemGroup>
+
 </Project>
