--- a/Demos/Extensions/Wisej.DemoBrowser.ChatControl/Wisej.DemoBrowser.ChatControl.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.ChatControl/Wisej.DemoBrowser.ChatControl.csproj
@@ -27,7 +27,7 @@
 			<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 			<PackageReference Include="System.Net.Http" Version="4.3.4" />
 			<PackageReference Include="Wisej-3" Version="3.5.*-*" />
-			<PackageReference Include="Wisej-3-Chat" Version="3.5.*-*" />
+			<PackageReference Include="Wisej-3-Chat" Version="3.5.4" />
 			<PackageReference Include="System.Data.SqlClient" Version="4.*" />
 		</ItemGroup>
 
