--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,9 @@ jobs:
 
     - name: Push to Azure DevOps
       run: |
-        git remote add azure https://$(ADO_PAT):$(ADO_PAT)@dev.azure.com/iceteagroup/Wisej.NET%20DemoBrowser/_git/wisej-demobrowser
+        git remote add azure https://${{ secrets.ADO_USERNAME }}:${{ secrets.ADO_PAT }}@dev.azure.com/iceteagroup/Wisej.NET%20DemoBrowser/_git/wisej-demobrowser
         git push azure main
 
     env:
       AZURE_PAT: ${{ secrets.ADO_PAT }} # Store Azure DevOps Personal Access Token (PAT) in GitHub Secrets
-      AZURE_USERNAME: ${{ secrets.ADO_USERNAME }} # Store Azure DevOps Personal Access Token (PAT) in GitHub Secrets
+      AZURE_USERNAME: ${{ secrets.ADO_USERNAME }} # Store Azure DevOps Username in GitHub Secrets
