--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
     - name: Checkout GitHub repository
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
       
     - name: Configure Git
       run: |
@@ -28,7 +30,7 @@ jobs:
 
     - name: Push to Azure DevOps
       run: |
-        git push azure main
+        git push azure main --force
 
     env:
       AZURE_PAT: ${{ secrets.ADO_PAT }} # Store Azure DevOps Personal Access Token (PAT) in GitHub Secrets
