IconPacks UX improvements.

--- a/Demos/IconPacks/Wisej.DemoBrowser.BootstrapIcons/Wisej.DemoBrowser.BootstrapIcons.csproj
+++ b/Demos/IconPacks/Wisej.DemoBrowser.BootstrapIcons/Wisej.DemoBrowser.BootstrapIcons.csproj
@@ -16,6 +16,7 @@
 	<ItemGroup>
 		<PackageReference Include="Wisej-3" Version="3.5.*-*" />
 		<PackageReference Include="Wisej-3-BootstrapIcons" Version="3.5.*-*" />
+		<PackageReference Include="Wisej-3-ClientClipboard" Version="3.5.*-*" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
 
